Add book Ça, c’est OpenSCAD.

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -122,6 +122,22 @@
 
     <section id="books-english">
       <h1>English</h1>
+      <!--
+      <p style="clear: both"><br></p>
+      <p id="">
+        <img class="libimg" width="200" src="images/" align="right">
+        <h2></h2>
+        <p>
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Author: </li>
+          <li>Publisher: </li>
+          <li>Date: </li>
+        </ul>
+        </div>
+      </p>
+      -->
       <p style="clear: both"><br></p>
       <p>
         <img class="libimg" width="200" src="images/ProgrammingWithOpenSCAD.png" align="right">
@@ -544,6 +560,47 @@
 
     <section id="books-french">
       <h1>French / Français</h1>
+      <p style="clear: both"><br></p>
+      <p id="ca-cest-openscad">
+        <img class="libimg" width="200" src="images/Ca-Cest-OpenSCAD.jpg" align="right">
+        <h2>Ça, c’est OpenSCAD</h2>
+        <h3>Un manuel d’initiation à la modélisation 3D paramétrique</h3>
+        <p>
+          OpenSCAD est un logiciel libre de modélisation 3D qui se distingue par une
+          approche originale : au lieu de dessiner avec la souris, l’utilisateur décrit
+          son modèle en écrivant un code simple et structuré. Cette méthode permet de
+          créer des objets paramétriques, précis et facilement reproductibles.
+        </p>
+        <h3>Le livre</h3>
+        <p>
+          Ça, c’est OpenSCAD est le premier manuel en français entièrement dédié à ce
+          logiciel. Destiné aux étudiants, enseignants, makers, artistes et passionnés
+          de fabrication numérique.
+        </p>
+        <p>
+          Contrairement aux logiciels classiques de CAO, OpenSCAD ne demande pas de
+          cliquer ni de dessiner... mais d’écrire. Avec quelques mots simples — cube,
+          sphere, cylinder, translate, rotate — vous décrivez votre objet en code,
+          et il prend vie en 3D sous vos yeux.
+          <ul>
+            <li>des scripts courts, faciles à tester et à modifier,</li>
+            <li>des explications claires pour comprendre la logique du langage,</li>
+            <li>des applications concrètes pour l’impression 3D, la robotique et la création artistique.</li>
+          </ul>
+          Mon objectif est simple : montrer que la modélisation 3D peut être accessible
+          à tous, même sans expérience en programmation. Étudiants, enseignants, makers,
+          créateurs... chacun pourra s’y retrouver.
+        </p>
+        <div class="book-data">
+        <ul>
+          <li>Auteur : Roberto Hamm</li>
+          <li>Editeur : Auto-édition sur KDP Amazon</li>
+          <li>Publié : août 2025</li>
+          <li>ISBN : 979-10-415-7709-5</li>
+          <li>Disponible sur <a href="https://www.amazon.fr/dp/B0FNLPF5HP">Amazon</a> : Prix public : 16€</li>
+        </ul>
+        </div>
+      </p>
       <p style="clear: both"><br></p>
       <p id="geometrie-dans-le-space-et-impression-3d">
         <img class="libimg" width="200" src="images/GeometrieDansLeSpaceEtImpression3D.png" align="right">
