Add in the board game toolkit into the libraries for openscad
Add in the board game toolkit into the libraries set for openscad.

--- a/libraries.html
+++ b/libraries.html
@@ -222,6 +222,21 @@
         <li>License: <a href="https://spdx.org/licenses/MIT.html">MIT</a></li>
       </ul>
       <p style="clear: both"></p>
+
+      <img class="libimg" src="images/board_game_toolkit.png" width="200" align="right">
+      <h2 id="Assets">Board gametoolkit</h2>
+      <p>
+        A collection of openscad scripts to make it easier to make boxes, targeting board games
+        specifically.  It has tesselation layouts, many different types of boxes, ways of creating
+        finger holes, catches and lots of shapes used in board games.  Will generation multi-color
+        3mf files for multi-color printing.
+      </p>
+      <ul>
+        <li><a href="https://github.com/pinkfish/openscad_boardgame_toolkit">Library</a></li>
+        <li><a href="https://github.com/pinkfish/openscad_boardgame_toolkit/wiki">Documentation</a></li>
+        <li>License: <a href="https://github.com/pinkfish/openscad_boardgame_toolkit?tab=Apache-2.0-1-ov-file">Apache 2.0</a></li>
+      </ul>
+      <p style="clear: both"></p>
     </section>
 
     <section id="singletopic">
