--- a/downloads.html
+++ b/downloads.html
@@ -134,7 +134,7 @@
         <div class="link-button">
           <a href="#osx"><i class="fas fa-box-open selected"></i></a>
           <h1><a href="#osx">Releases</a></h1>
-          <p><small>Download the stable release version for your platform. A new release is made every week! Enable the new Manifold geometry engine in Preferences for a huge performance boost.</small></p>
+          <p><small>Download the latest version for your platform. Enable the new Manifold geometry engine in Preferences for a huge performance boost.</small></p>
         </div>
       </div>
     </section-head>
