fix(html): remove closing tag without start tag

--- a/documentation-books.html
+++ b/documentation-books.html
@@ -103,7 +103,7 @@
       <div class="link-grid">
         <div class="link-button">
           <a href="documentation.html"><i class="fas fa-scroll"></i></a>
-          <h1><a href="documentation.html">Documentation</i></a></h1>
+          <h1><a href="documentation.html">Documentation</a></h1>
         </div>
         <div class="link-button">
           <a href="documentation-books.html"><i class="fas fa-book selected"></i></a>
