--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -66,7 +66,7 @@
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$fs">$fs</a></code></dt>
           <dd>minimum size</dd>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$fn">$fn</a></code></dt>
-          <dd>number of fragments</dd>
+          <dd>number of segments</dd>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$t">$t</a></code></dt>
           <dd>animation step</dd>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$vpr">$vpr</a></code></dt>
