Add $fe to cheatsheet
Not the longest phrase in the `Special variables` section

https://github.com/openscad/openscad/pull/6361 in progress

--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -77,6 +77,8 @@
           <dd>minimum angle</dd>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$fs">$fs</a></code></dt>
           <dd>minimum size</dd>
+          <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$fe">$fe</a></code></dt>
+          <dd>maximum discretization error</dd>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$fn">$fn</a></code></dt>
           <dd>number of segments</dd>
           <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$t">$t</a></code></dt>
