Add advent calendar to gallery page.

--- a/gallery.html
+++ b/gallery.html
@@ -90,6 +90,7 @@
 			<li><a href="advent-calendar-2022/">2022 Advent Calendar</a></li>
 			<li><a href="advent-calendar-2023/">2023 Advent Calendar</a></li>
 			<li><a href="advent-calendar-2024/">2024 Advent Calendar</a></li>
+			<li><a href="advent-calendar-2025/">2025 Advent Calendar</a></li>
 		</ul>
 	</div>
 
