Update Advent Calendar; Open doors.

--- a/advent-calendar-2019/index.html
+++ b/advent-calendar-2019/index.html
@@ -294,6 +294,8 @@ All scripts are licensed <a class="footer" href="https://creativecommons.org/pub
 <span class="sep">-</span>
 <a class="footer" href="https://openscad.org/advent-calendar-2024/">2024</a>
 <span class="sep">-</span>
+<a class="footer" href="https://openscad.org/advent-calendar-2025/">2025</a>
+<span class="sep">-</span>
 </div>
 </body>
 </html>
