--- a/advent-calendar-2022/index.html
+++ b/advent-calendar-2022/index.html
@@ -579,6 +579,8 @@ All scripts except door 22 are licensed <a class="link" href="https://creativeco
 <span class="sep">-</span>
 <a class="link" href="https://openscad.org/advent-calendar-2024/">2024</a>
 <span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2025/">2025</a>
+<span class="sep">-</span>
 </div>
 <div id="modal" class="modal">
   <div class="modal-content">
