--- a/advent-calendar-2024/index.html
+++ b/advent-calendar-2024/index.html
@@ -581,6 +581,8 @@ All scripts are licensed <a class="link" href="https://creativecommons.org/publi
 <span class="sep">-</span>
 <a class="link" href="https://openscad.org/advent-calendar-2024/">2024</a>
 <span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2025/">2025</a>
+<span class="sep">-</span>
 </div>
 <div id="modal" class="modal">
   <div class="modal-content">
