--- a/advent-calendar-2025/index.html
+++ b/advent-calendar-2025/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
     <!--
@@ -112,6 +113,7 @@
     document.addEventListener('DOMContentLoaded', function() {
         feather.replace();
         new Snow('#snow', { number:20, r: 2.5, v: 1 });
+        /*
         date = new Date();
         if (date.getUTCMonth() === 11) {
           for (day = 1;day <= date.getUTCDate();day++) {
@@ -119,7 +121,11 @@
             $(".day-" + day + " .door").addClass("transform");
           }
         }
+        */
         for (day = 1;day <= 24;day++) {
+          $(".day-" + day + " .content").removeClass("hide");
+          $(".day-" + day + " .door").addClass("transform");
+          $(".day-" + day + " input").prop("checked", true);
           div = document.getElementById("day-" + day);
           data = days.get("day" + day);
           if (data) {
@@ -303,19 +309,12 @@ label:hover .door {
   color: #9dcb51;
   font-family: 'Kalam', cursive;
   font-size: 4em;
+  text-align: center;
+  flex-direction: column;
 }
 
 .small {
   font-size: 0.4em;
-}
-
-.header p {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    vertical-align: center;
 }
 
 .header img {
@@ -486,6 +485,7 @@ a.link:hover {
   color: #9dcb51;
   list-style: none;
   line-height: 2em;
+  display: inline-block;
 }
 
 .modal-body a {
@@ -516,15 +516,13 @@ a.link:hover {
 <div id="snow"></div>
 <section class="cal">
   <div class="header">
-    <p>
-      <span class="green">Open</span><span class="yellow">SCAD</span>
-      <br><span class="gray small">Advent Calendar 2025</span>
-      <br><span class="gray small">#SCADvent &nbsp;
+      <span><span class="green">Open</span><span class="yellow">SCAD</span></span>
+      <span class="gray small">Advent Calendar 2025</span>
+      <span class="gray small">#SCADvent &nbsp;
       <a class="gray" href="https://fosstodon.org/@OpenSCAD" title="Mastodon" rel="me"><i class="fab fa-mastodon"></i></a>
       <a class="gray" href="https://bsky.app/profile/openscad.bsky.social" title="Bluesky" rel="me"><i class="fab fa-bluesky"></i></a>
       </span>
       <img src="https://openscad.org/images/openscad.png">
-    </p>
   </div>
   <div class="day-1"><label><input type="checkbox"><div class="door"><div class="front">1</div><div class="back"></div></div><div id="day-1" class="content hide"><div class="link"><button id="btn1"><i data-feather="zoom-in" width="32" height="32"></i></button></div></div></input></label></div>
   <div class="day-2"><label><input type="checkbox"><div class="door"><div class="front">2</div><div class="back"></div></div><div id="day-2" class="content hide"><div class="link"><button id="btn2"><i data-feather="zoom-in" width="32" height="32"></i></button></div></div></input></label></div>
@@ -559,8 +557,24 @@ a.link:hover {
 <span class="sep">||</span>
 All scripts are licensed <a class="link" href="https://creativecommons.org/publicdomain/zero/1.0/legalcode">CC0</a>
 <span class="sep">||</span>
-Doors open midnight UTC
+<a class="link" href="https://github.com/openscad/openscad-advent-calendar-2025/">Design repo on github</a>
 <span class="sep">||</span>
+<br>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2019/">2019</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2020/">2020</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2021/">2021</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2022/">2022</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2023/">2023</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2024/">2024</a>
+<span class="sep">-</span>
+<a class="link" href="https://openscad.org/advent-calendar-2025/">2025</a>
+<span class="sep">-</span>
 </div>
 <div id="modal" class="modal">
   <div class="modal-content">
