Add OSC disclaimer. Remove note about BountySource.

--- a/community.html
+++ b/community.html
@@ -126,8 +126,11 @@
       <ul>
         <li>We accept sponsorships as well as individual donations</li>
         <li>For sponsorship opportunities, please contact <a href="mailto:info@openscad.org">info@openscad.org</a></li>
-        <li>For donations, we have an <a href="https://opencollective.com/openscad/donate">Open Collective account</a></li>
-        <li>Please do not use BountySource for now, their status is unknown and it's unclear if they still process bounties as expected!</li>
+        <li>For donations, we have an <a href="https://opencollective.com/openscad/donate">Open Collective account</a>.
+            Open Collective handles only pure donations. No goods or services can be expected in return. Any requests
+            for refunds for those purposes will be rejected. For details see their "<a
+            href="https://docs.oscollective.org/how-it-works/understanding-the-types-of-funds-we-handle"
+            >understanding the types of funds we handle</a>" page.</li>
       </ul>
 		</section>
 
