use releases file

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	<script type="text/javascript">
 	  var fileinfo = {};
 	</script>
-	<script src="inc/mac_release_links.js"></script>
-	<script src="inc/win_release_links.js"></script>
+  <script src="assets/js/fileinfo.js"></script>
+	<script src="inc/releases.js"></script>
 	<script src="assets/js/header.js"></script>
 	<script src="assets/js/home.js"></script>
 <style>
