--- a/downloads.html
+++ b/downloads.html
@@ -31,25 +31,7 @@
 	<script>
 	  var fileinfo = {};
 	</script>
-	<script>
-	  function setSnapshotFileInfo(key, name, size, url) {
-	    fileinfo[key + "_NAME"] = name;
-	    fileinfo[key + "_SIZE"] = size;
-	    fileinfo[key + "_URL"] = url;
-	    fileinfo[key + "_ASC_URL"] = url + ".asc";
-	    fileinfo[key + "_SHA256_URL"] = url + ".sha256";
-	    fileinfo[key + "_SHA512_URL"] = url + ".sha512";
-	  }
-	  jQuery(document).ready(function(){
-	    for (var fileid in fileinfo) {
-	      if (fileid.indexOf("_URL") >= 0) {
-	        $("a[id="+fileid+"]").attr('href',fileinfo[fileid]);
-	      } else {
-	        $("#"+fileid).text(fileinfo[fileid]);
-	      }
-	    }
-	  });
-	</script>
+	<script src="assets/js/fileinfo.js"></script>
 	<script src="inc/releases.js"></script>
 	<script type="text/javascript" src="https://files.openscad.org/rc/.rc.js" onload="jQuery(function(){ jQuery('#rc').show(); jQuery('#nav-rc').show(); });"></script>
 	<script type="text/javascript" src="https://files.openscad.org/snapshots/.snapshots.js"></script>
