--- a/downloads.html
+++ b/downloads.html
@@ -687,14 +687,14 @@
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Raspbian_12/ ./</code></small>
 				</pre>
 
+				<h3>Raspbian 13 (64-bit only)</h3>
+				<pre>
+					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/Raspbian_13/ ./</code></small>
+				</pre>
+
 				<h3>Ubuntu 22.04 (x86_64, aarch64)</h3>
 				<pre>
 					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_22.04/ ./</code></small>
-				</pre>
-
-				<h3>Ubuntu 23.10 (x86_64, aarch64)</h3>
-				<pre>
-					<small><code>deb https://download.opensuse.org/repositories/home:/t-paul/xUbuntu_23.10/ ./</code></small>
 				</pre>
 
 				<h3>Ubuntu 24.04 (x86_64, aarch64)</h3>
