Change the argument list for text() to match the (longstanding) implementation.

--- a/cheatsheet/index.html
+++ b/cheatsheet/index.html
@@ -105,7 +105,10 @@
         <code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#square">square</a>([width,height],center)</code>
         <code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#polygon">polygon</a>([points])</code>
         <code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#polygon">polygon</a>([points],[paths])</code>
-        <code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Text">text</a>(t, size, font,<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;halign, valign, spacing,<br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;direction, language, script)</code>
+        <code>
+          <a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Text">text</a>(t, size, font, direction, language, script,
+          <br/>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;halign, valign, spacing)
+        </code>
         <code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Importing_Geometry#import">import</a>("&hellip;.<span class="tooltip">ext<span class="tooltiptext">formats: DXF|SVG</span></span>", convexity)</code>
         <code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#3D_to_2D_Projection">projection</a>(cut)</code>
       </article>
